--- a/wp-content/themes/outside-traineeship-boilerplate/package.json
+++ b/wp-content/themes/outside-traineeship-boilerplate/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "description": "[![Build Status](https://travis-ci.org/Automattic/_s.svg?branch=master)](https://travis-ci.org/Automattic/_s)",
   "dependencies": {
+    "@vimeo/player": "^2.25.0",
     "bootstrap": "5.3.2"
   },
   "devDependencies": {
