--- a/wp-content/themes/outside-traineeship-boilerplate/package.json
+++ b/wp-content/themes/outside-traineeship-boilerplate/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "description": "[![Build Status](https://travis-ci.org/Automattic/_s.svg?branch=master)](https://travis-ci.org/Automattic/_s)",
   "dependencies": {
-    "bootstrap": "5.3.2"
+    "bootstrap": "5.3.2",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "browser-sync": "^3.0.3",
