--- a/.github/workflows/pantheon.yml
+++ b/.github/workflows/pantheon.yml
@@ -2,10 +2,10 @@ name: Setup Terminus
 on:
   push:
     branches:
-      - main
+      - stage
   pull_request:
     branches:
-      - main
+      - stage
 jobs:
   deploy:
     runs-on: ubuntu-latest
