--- a/.github/workflows/pantheon.yml
+++ b/.github/workflows/pantheon.yml
@@ -14,7 +14,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@stage
+      - uses: actions/checkout@main
       - name: Installing PHP
         uses: shivammathur/setup-php@master
         with:
