--- a/.github/workflows/pantheon.yml
+++ b/.github/workflows/pantheon.yml
@@ -2,14 +2,10 @@ name: Setup Terminus
 on:
   push:
     branches:
-      - stage
+      - main
   pull_request:
     branches:
-      - stage
-# env:
-#   pantheon_env: 'dev'
-#   pantheon_repo: ${{ secrets.PANTHEON_REPO }}
-#   pantheon_site_name: ${{ secrets.TERMINUS_SITE }}
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -28,7 +24,6 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
