Removed vimeo player j
PR2-WTFA-2 : Offcanvas bootstrap applied

PR2-WTFA-2 : dropdown js imported

PR2-WTFA-2 : unresolve dropdown issue

PR2-WTFA-2 : dropdown error 2

PR2-WTFA-2: popperjs core added

PR2-WTFA-2 : dropdown working

PR2-WTFA-2 : links ecoration removed

--- a/wp-content/themes/outside-traineeship-boilerplate/package.json
+++ b/wp-content/themes/outside-traineeship-boilerplate/package.json
@@ -6,6 +6,7 @@
   "description": "[![Build Status](https://travis-ci.org/Automattic/_s.svg?branch=master)](https://travis-ci.org/Automattic/_s)",
   "dependencies": {
     "@vimeo/player": "^2.25.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "5.3.2",
     "swiper": "^11.1.15"
   },
